# Checkmate

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  checkmate.toml  enterprise_checkmate.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: checkmate.yml  ci.yml
checkmate/: __init__.py  __main__.py  _config.py  _plugins.py  command.py  config.py  configurable.py  demo_config.yaml  demo_server.py  langservice.py  payloads.py  pilot_config.py  report.py
checkmate/adapters/: __init__.py  anthropic.py  base.py  cohere.py  hf_local.py  http_local.py  mistral.py  mock.py  null.py  openai_compatible.py
checkmate/analyze/: aggregate_reports.py  count_tokens.py  perf_stats.py
checkmate/buffs/: base.py  lowercase.py  paraphrase.py
checkmate/cli/: __init__.py  main.py
checkmate/core/: __init__.py  config.py  engine.py  report.py  types.py
checkmate/data/calibration/: calibration-2024-09update.json  calibration-2024-summer.json  calibration-alpha-202407.json
checkmate/data/payloads/: access_shell_commands.json  encoded.json  example_domains_xss.json  harmful_behaviors.json  markdown_js.json  rude_chinese.json  web_html_js.json
checkmate/db/: __init__.py  client.py  postgres.py
checkmate/detectors/: __init__.py  base.py  data_leak.py  mitigation.py  rag_consistency.py  registry.py  tool_abuse.py  toxicity.py
checkmate/evaluators/: base.py  maxrecall.py
checkmate/execution/: parallel.py
checkmate/generators/: __init__.py  base.py  function.py  ggml.py  http_local.py  langchain_serve.py  litellm.py  mistral.py  test.py  watsonx.py
checkmate/harnesses/: probewise.py
checkmate/langproviders/: remote.py
checkmate/owasp/: mapper.py
checkmate/presets/: __init__.py  agent_basic.yaml  chatbot_basic.yaml  chatbot_full.yaml  chatbot_quick.yaml  loader.py  rag_basic.yaml  smoke_test.yaml
checkmate/probes/: __init__.py  agent_abuse.py  base.py  context_override.py  dan.py  data_exfil.py  prompt_injection.py  rag_injection.py  registry.py  smoke_probe.py
checkmate/reporting/: __init__.py  csv.py  html.py  json_summary.py  renderer.py
checkmate/resources/: ansi.py  common.py  plugin_cache.json
checkmate/resources/api/: huggingface.py
checkmate/resources/autodan/: genetic.py  model_utils.py
checkmate/resources/beast/: __init__.py  beast_attack.py
checkmate/resources/fixer/: 20240822_knownbadsignatures_rename.py  20250224_lightweight_probe_defaults.py  20250423_specialwords.py  20250908_xss_rename.py
checkmate/resources/gcg/: generate_gcg.py
checkmate/resources/tap/: generator_utils.py  tap_main.py
checkmate/scoring/: __init__.py  risk_scorer.py
checkmate/utils/: __init__.py  preflight.py  resources.py
checkmate/vector/: __init__.py  client.py
docs/: TEMPLATE_PROMPTS.md
examples/: __init__.py  basic_usage.py  config.yaml
examples/configs/: agent_basic_http_local.yaml  chatbot_basic.yaml  chatbot_full_http_local.yaml  chatbot_quick_http_local.yaml  rag_basic_http_local.yaml  smoke_test_deepseek.yaml
legacy/: README.md
legacy/configs/: http_app_rag_example.yaml  openai_chatbot_example.yaml  smoke_test_example.yaml
legacy/detectors/: always.py  ansiescape.py  continuation.py  dan.py  divergence.py  encoding.py  exploitation.py  fileformats.py  goodside.py  judge.py  knownbadsignatures.py  leakreplay.py  lmrc.py  malwaregen.py  misleading.py  packagehallucination.py  perspective.py  productkey.py  promptinject.py  shields.py  snowball.py  unsafe_content.py  visual_jailbreak.py  web_injection.py
legacy/garak_removed/: _tier.py  attempt.py  cli.py  dan.py  exception.py  interactive.py  models.py  pilot_config.py
legacy/garak_removed/analyze/: analyze_log.py  calibration.py  get_tree.py  misp.py  qual_review.py  report_avid.py  report_digest.py
legacy/garak_removed/attacks/: __init__.py  loader.py
legacy/garak_removed/buffs/: encoding.py  low_resource_languages.py
legacy/garak_removed/data/: __init__.py
legacy/garak_removed/execution/: __init__.py
legacy/garak_removed/generators/: adapter_wrapper.py  azure.py  cohere.py  groq.py  guardrails.py  huggingface.py  langchain.py  nemo.py  nim.py  nvcf.py  ollama.py  openai.py  rasa.py  replicate.py  rest.py
legacy/garak_removed/harnesses/: base.py  parallel.py  pxd.py
legacy/garak_removed/langproviders/: base.py  local.py
legacy/garak_removed/owasp/: __init__.py
legacy/garak_removed/presets/: __init__.py  loader.py  smoke_test.yaml
legacy/garak_removed/reporting/: renderer.py  report.py
legacy/garak_removed/resources/: encodings.py  garak.core.yaml
legacy/garak_removed/scoring/: __init__.py
legacy/phase2-database/db/: __init__.py  client.py
legacy/phase5-vector-store/tools/: ingest_attack_prompts_to_vector_store.py
legacy/phase5-vector-store/vector_store/: __init__.py  base.py  factory.py  (+1 more)
legacy/presets/: agent_tools.yaml  chatbot_basic.yaml  rag_basic.yaml
legacy/probes/: ansiescape.py  atkgen.py  audio.py  av_spam_scanning.py  continuation.py  dan.py  divergence.py  doctor.py  donotanswer.py  dra.py  encoding.py  exploitation.py  fileformats.py  glitch.py  goodside.py  grandma.py  latentinjection.py  leakreplay.py  lmrc.py  malwaregen.py  misleading.py  packagehallucination.py  phrasing.py  promptinject.py  realtoxicityprompts.py  sata.py  smuggling.py  snowball.py  suffix.py  tap.py  test.py  topic.py  visual_jailbreak.py  web_injection.py
templates/: report.html.j2
test_results/: config_agent.yaml  config_chatbot.yaml  config_quick.yaml  config_rag.yaml
test_results/quick_test_20251126_130217/: findings.json  local-llm-quick-test.report.jsonl  summary.json
tests/: __init__.py  test_adapters.py  test_beta_functionality.py  test_core.py  test_resources.py
tests/adapters/: test_adapters.py
tests/config/: test_config.py
tests/detectors/: test_new_detectors.py  test_rag_consistency_detector.py  test_tool_abuse_detector.py
tests/execution/: test_parallel.py
tests/reporting/: __init__.py  test_report_generator.py
(+22 files in other folders)
