[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "checkmate"
version = "1.0.0"
authors = [
  { name = "Checkmate Team" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Standalone LLM red-teaming scanner"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "requests>=2.28.0",
  "httpx>=0.24.0",
  "openai>=1.0.0",
  "colorama>=0.4.3",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14.0",
  "pytest-cov>=5.0.0",
  "black>=24.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]
anthropic = [
  "anthropic>=0.20.0",
]
cohere = [
  "cohere>=5.0.0",
]
mistral = [
  "mistralai>=1.0.0",
]
huggingface = [
  "transformers>=4.40.0",
  "torch>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/checkmate-ai/checkmate"
"Bug Tracker" = "https://github.com/checkmate-ai/checkmate/issues"

[project.scripts]
checkmate = "checkmate.cli.main:main"

[tool.flit.module]
name = "checkmate"

[tool.flit.sdist]
include = [
  "*.md",
  "*.txt",
  "examples/*",
]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore",
    "default:::checkmate",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "-ra",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["./checkmate"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]